--- a/views/results.erb
+++ b/views/results.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>
-      
-    </title>
+    <title>Fortune</title>
   </head>
   <body>
-    
+    <h3>HERE IS YOUR FORTUNE</h3>
+    <h4>hey <%=@name%></h4>
   </body>
 </html>
