--- a/views/results.erb
+++ b/views/results.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h3>HERE IS YOUR FORTUNE</h3>
-    <h4>hey <%=@name%></h4>
+    <h4>Hey <%=@name%>, <%=@fortune%>!</h4>
   </body>
 </html>
