--- a/views/results.erb
+++ b/views/results.erb
@@ -4,7 +4,7 @@
     <title>Fortune</title>
   </head>
   <body>
-    <h3>HERE IS YOUR FORTUNE</h3>
+    <h3>HERE IS YOUR FORTUNE:</h3>
     <h4>Hey <%=@name%>, <%=@fortune%>!</h4>
   </body>
 </html>
